examples/test/testpolicy6117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6117
  namespace: namespace418
spec:
  podSelector:
    matchLabels:
      key40: value29
      key13: value48
      key49: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value44
          key13: value21
          key24: value49
